# LogLib

./: CMakeLists.txt  README.md  install.sh  log.cpp  log.h  uninstall.sh
